# code_c

./: .gitignore  README.md
c++/20180307_folly_atomichashmap/: test_atomic_hash.c  test_tbb_concurrent_hash_map.cpp
c++/20180319_microspinlock_mutex/: test_mutex.cpp  test_pthread_spinlock.cpp
c++/20180321_umpmcqueue_bench/: uspscqueue_try_dequeue_bench.cpp
c++/20180427_shared_ptr/: shared_ptr_class_member.cpp  test_shared_ptr.cpp
c++/20180508_openssl_base64/: test_openssl_base64.cpp
c++/20180510_sharedptr_malloc/: test_sharedptr_chararray2.cpp
c++/20180812_google_profiler/: gprofile.cpp
c++/20180903_compile_time_prime/: compile_time_prime.cpp
c++/20180905_lambda_function_template/: test_lambda.cpp
c++/20180907_nlohmann_json/: json_sample.cpp
c++/20220418-cmake-catch2-sample/: CMakeLists.txt  readme.md  test.cpp
c-util/: bounded_blocking_queue.h  bounded_blocking_queue_test.cpp  log.hpp  log_test.cc
cpp-util/: bounded_blocking_queue.hpp  scope_guard_test.cpp
util/: .clang-format  ScopeGuard.hpp  bounded_blocking_queue.h  bounded_blocking_queue.hpp  bounded_blocking_queue_cpp_test.cpp  bounded_blocking_queue_test.cpp  buffer.hpp  buffer_test.cpp  cmd.hpp  defer.hpp  defer_test.cpp  file.hpp  file_test.cpp  hex.hpp  hex_test.cpp  json.hpp  log.hpp  log_test.cpp  main.cpp  mempool.h  perf_count.hpp  perf_count_test.cpp  perf_stats.hpp  perf_stats_test.cpp  queue.hpp  queue_test.cpp  scope_guard.hpp  scope_guard_test.cpp  socket.hpp  stop_watch.h  stop_watch.hpp  stop_watch_test.c  stop_watch_test.cpp  string.hpp  test.cpp  threadpool.c  threadpool.h
(+177 files in other folders)
